--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.3.5",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6",
+    "vuex": "next"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.19",
@@ -18,7 +21,9 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "sass": "^1.62.0",
+    "sass-loader": "^13.2.2"
   },
   "eslintConfig": {
     "root": true,
