--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "axios": "^1.3.5",
     "core-js": "^3.6.5",
+    "normalize.css": "^8.0.1",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
     "vuex": "next"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.21.8",
     "@vue/cli-plugin-babel": "~4.5.19",
     "@vue/cli-plugin-eslint": "~4.5.19",
     "@vue/cli-service": "~4.5.19",
@@ -24,20 +26,6 @@
     "eslint-plugin-vue": "^7.0.0",
     "sass": "^1.62.0",
     "sass-loader": "^13.2.2"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
   },
   "browserslist": [
     "> 1%",
